--- a/arbre.html
+++ b/arbre.html
@@ -17,7 +17,8 @@
       />
       <h1>hello student!</h1>
       <ul>
-        <li><a href="#">home</a></li>
+        <li><a href="#">my home
+        </a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">contact</a></li>
       </ul>
